--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,11 +7,11 @@
     <link href="https://fonts.googleapis.com/css?family=Italiana:400,600,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../static/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="/css/owl.carousel.min.css">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <!-- Style -->
-    <link rel="stylesheet" href="../static/css/style2.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -66,7 +66,7 @@
         </div>
     </header>
     <section id="hero">
-        <div class="hero" style="background-image: url('../static/images/italy.jpg');">
+        <div class="hero" style="background-image: url('/images/italy.jpg');">
             <div class="hero-content">
                 <h1 class="hero-headline">Find top-rated pros for becoming an Italian citizen.</h1>
             </div>
@@ -197,7 +197,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-4 mb-lg-0">
                     <div class="mx-auto text-center pt-4">
-                        <img src="../static/images/italian-passport.jpg" class="rounded" alt="...">
+                        <img src="/images/italian-passport.jpg" class="rounded" alt="...">
                     </div>
                 </div>
                 <div class="col-lg-6 pt-3">
@@ -319,7 +319,7 @@
                 </div>
             </div>
         </div>
-        <div class=" work-process hero pb-5" style="background-image: url('../static/images/italy.jpg');">
+        <div class=" work-process hero pb-5" style="background-image: url('/images/italy.jpg');">
 
             <div class=" mb-5 d-flex">
                 <div class="col-2"></div>
@@ -961,9 +961,9 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/js/bootstrap.bundle.min.js"></script>
-        <script src="/static/js/popper.min.js"></script>
-        <script src="/static/js/bootstrap.min.js"></script>
-        <script src="/static/js/jquery.sticky.js"></script>
-        <script src="/static/js/main.js"></script>
+        <script src="/js/popper.min.js"></script>
+        <script src="/js/bootstrap.min.js"></script>
+        <script src="/js/jquery.sticky.js"></script>
+        <script src="/js/main.js"></script>
 
 </html>
