--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,7 +21,7 @@
 
 <main>
     <span class="photo-div"></span>
-    <section id="login" class="login-section m-3">
+    <section id="login" class="login-section m-3" >
         <div id="main-wrapper" class="container">
             <div class="row justify-content-center">
                 <div class="col-l-10">
@@ -44,7 +44,7 @@
                                                 <label for="password">Password</label>
                                                 <input name="password" class="form-control" id="password">
                                             </div>
-                                            <button type="submit" class="btn btn-theme">Login</button>
+                                            <button type="submit" class="btn btn-theme" >Login</button>
 
                                         </form>
                                         <div class="d-flex mt-3">
@@ -55,11 +55,8 @@
                                 </div>
                                 <div class="col-lg-6 ">
                                     <div class="account-block rounded-right" style="background-image: url('/images/julia-solonina.jpg');">
-                                        <div class="overlay rounded-right"></div>
-                                        <div class="account-testimonial">
-                                            <h4 class="text-white mb-4">This  beautiful theme yours!</h4>
-                                            <p class="lead text-white">"Best investment i made for a long time. Can only recommend it for other users."</p>
-                                            <p>- Admin User</p>
+                                        <div class=" rounded-right"></div>
+
                                         </div>
                                     </div>
                                 </div>
@@ -206,4 +203,6 @@
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/jquery.sticky.js"></script>
 <script src="/js/main.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </html>
