--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -100,12 +100,12 @@
     <section id="services" style="color: #000; background-color: #f3f2f2;">
         <div class="pt-5">
             <div class="row d-flex justify-content-center">
-                <div class="col-md-10 col-xl-8 text-center">
+                <div class="col-md-10 col-xl-8 text-center ">
                     <h1 class="fw-bold mb-4" id="header">Highest-Rated Service Providers</h1>
                 </div>
             </div>
 
-            <div class="row text-center mx-2" id="service-providers">
+            <div class="row text-center mx-2 justify-content-center" id="service-providers">
                 <div class="col-md-4 mb-4 mb-md-1">
                     <div class="card" id="card-1">
                         <div class="card-body py-4 mt-2">
@@ -117,6 +117,7 @@
                             <ul class="list-unstyled d-flex justify-content-center ">
                             </ul>
                             <p class="mb-2"><i class="fas fa-quote-left pe-2"></i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur quae quaerat ad velit ab hic tenetur.</p>
+                            <a class="read-more"></a>
                         </div>
                     </div>
                 </div>
@@ -131,11 +132,13 @@
                             <ul class="list-unstyled d-flex justify-content-center ">
                             </ul>
                             <p class="mb-2"><i class="fas fa-quote-left pe-2"></i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur quae quaerat ad velit ab hic tenetur.</p>
+                            <a class="read-more"></a>
+
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-0">
-                    <div class="card" id="card-3">
+                    <div class="card " id="card-3">
                         <div class="card-body py-4 mt-2">
                             <h2 class="d-flex justify-content-center mb-4 font-weight-bold" style="font-family: Italiana">
                                 <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(10).webp" class="rounded-circle shadow-1-strong" width="100" height="100" />
@@ -145,13 +148,15 @@
                             <ul class="list-unstyled d-flex justify-content-center ">
                             </ul>
                             <p class="mb-2"><i class="fas fa-quote-left pe-2"></i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur quae quaerat ad velit ab hic tenetur.</p>
+                            <a class="read-more"></a>
+
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class="d-flex justify-content-center mt-3"> <!-- Added container for centering the button -->
-                <button id="load-more-button" class="btn btn-primary btn-lg me-3 mb-3">Load More</button>
+                <button id="load-more-button" class="btn btn-primary btn-lg me-3 mb-3 ">Load More</button>
             </div>
 
         </div>
