--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -48,8 +48,8 @@
 
                                         </form>
                                         <div class="d-flex mt-3">
-                                            <a href="#l" class="forgot-link float-left text-primary">Forgot password?</a>
-                                            <a id="register-anchor" class="forgot-link float-right text-primary pl-3" onclick="createRegisterSection()">Register</a>
+                                            <a class="forgot-link float-left text-primary" onclick="createRegisterSection()">Register</a>
+
                                         </div>
                                     </div>
                                 </div>
