--- a/src/main/resources/static/css/service-provider.css
+++ b/src/main/resources/static/css/service-provider.css
@@ -5,9 +5,10 @@ body{
 }
 
 b {
-    color: #1e7e34
-
+    color: #1c7430;
 }
+
+
 * {
     padding: 0;
     margin: 0;
@@ -60,7 +61,7 @@ b {
 
 .sidebar {
     position: absolute;
-    width: 220px;
+    width: 100%;
     height: 100%;
     background-color: #161616;
     color: #fff;
@@ -80,7 +81,7 @@ b {
 
 #content {
     float: right;
-    width: 82%
+    width: 100%
 }
 
 a {
@@ -121,7 +122,7 @@ nav ul li a {
 
 nav ul li a:hover {
     color: #fff;
-    background-color: #2e2e2e
+
 }
 
 nav ul li.active a {
