--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,3 +1,8 @@
+html, body {
+  overflow-x: hidden;
+}
+
+
 body {
   font-family: "Monteserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   background-color: #fff;
@@ -20,7 +25,7 @@ body {
   body.offcanvas-menu:before {
     opacity: 1;
     z-index: 1002;
-    visibility: visible; }
+    visibility: hidden; }
 
 p {
   color: #b3b3b3;
@@ -76,21 +81,12 @@ a {
   .site-navbar .container-fluid {
     padding-left: 7rem;
     padding-right: 7rem; }
-    @media (max-width: 1100px) {
-      .site-navbar .container-fluid {
-        padding-left: 15px;
-        padding-right: 0px; } }
+
   .site-navbar .site-logo {
     position: absolute;
     left: 5%;
   }
-    @media (max-width: 1100px) {
-      .site-navbar .site-logo {
-        position: relative;
-        left: auto; } }
-      #title-anchor {
-        color: white;
-      }
+
     .site-navbar .site-logo a {
       color: #fff;
       font-size: 1.5rem;
@@ -106,7 +102,7 @@ a {
         position: relative;
         right: auto; } }
   .site-navbar .site-menu-toggle {
-    color: #fff;
+    color: #1c7430;
     line-height: 0;
     font-size: 2.5rem;
     position: relative; }
