--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@
                     <ul class="site-menu js-clone-nav d-none d-xl-block ml-0 pl-0">
                         <li><a class="" href="about.html"><b>About</b></a></li>
                         <li class="has-children">
-                            <a href="" ><b> Services </b> </a>
+                            <a href="/service-provider/all" ><b> Services </b> </a>
                             <ul class="dropdown">
                                 <li><a href="">Translation Service</a></li>
                                 <li><a href="">Application Assistance</a></li>
