--- a/src/main/resources/templates/service-provider-new.html
+++ b/src/main/resources/templates/service-provider-new.html
@@ -11,7 +11,6 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <!-- Style -->
-    <link rel="stylesheet" href="/css/service-provider.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
@@ -22,7 +21,7 @@
     <title>Italian Citizenship Reviews</title>
 </head>
 <!-- NAVBAR -->
-<header class="site-navbar" >
+<header class="site-navbar" style="background-image: url('/images/col.jpg'); background-size: cover; height: fit-content">
     <div class="site-mobile-menu site-navbar-target">
         <div class="site-mobile-menu-header">
             <div class="site-mobile-menu-close" id="mobile-close">
@@ -41,8 +40,8 @@
                 <ul class="site-menu js-clone-nav d-none d-xl-block ml-0 pl-0" >
                     <li ><a class="" href="about.html"><b>About</b></a></li>
                     <li class="has-children">
-                        <a href=""><b> Services </b> </a>
-                        <ul class="dropdown">
+                        <a href="/service-provider/all"><b > Services </b> </a>
+                        <ul class="dropdown" >
                             <li><a href="">Translation Service</a></li>
                             <li><a href="">Application Assistance</a></li>
                             <li><a href="">Genealogical Research</a></li>
@@ -76,10 +75,10 @@
     </div>
 </header>
 
-<body >
+<body>
 
-    <div class="container p-0 bg-sec-light">
-        <div id="content" style="margin-top: 200px; ">
+    <div class="container">
+        <div id="content" style="margin-top: 125px; ">
 
             <div class="d-sm-flex">
                 <div class="me-sm-2">
@@ -178,25 +177,69 @@
                     </div>
                 </div>
                 <div class="bg-white p-2 border" id="hotels">
-                    <div class="hotel py-2 px-2 pb-4 border-bottom">
-                        <div class="row">
+                    <div class="service-provider py-2 px-2 pb-4 border-bottom">
+                        <div class="row " th:each="serviceProvider, stat : ${serviceProviders}" th:id="${stat.index}">
+                            <input type="hidden" th:id="'serviceProvider-' + ${stat.index}" th:value="${serviceProvider.serviceProviderId}" />
                             <div class="col-lg-3"><img
                                     src="https://images.unsplash.com/photo-1580835845971-a393b73bf370?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=967&q=80"
                                     alt="" class="hotel-img"></div>
                             <div class="col-lg-9">
                                 <div class="d-md-flex align-items-md-center">
-                                    <div class="name">Mayflower Hibiscus Inn <span class="city">Bandra, Mumbai</span></div>
-                                    <div class="ms-auto code text-uppercase">ABD09eh8</div>
+                                    <div class="name"><a th:href="@{/service-provider/{serviceProviderId}(serviceProviderId=${serviceProvider.serviceProviderId})}">[[${serviceProvider.name}]]</a></div>
                                 </div>
-                                <div class="rating"><span class="fas fa-star"></span> <span class="fas fa-star"></span>
-                                    <span class="fas fa-star"></span> <span class="fas fa-star"></span> <span
-                                            class="far fa-star"></span> <!-- Book now Enquiry --> </div>
+                                <div><p th:text="${serviceProvider.description}"></p></div>
+                                <div><p class="rating" th:text="${serviceProvider.avgRating}"></p></div>
+
                                 <div class="d-flex flex-column tags pt-1">
                                     <div><span class="fas fa-comment-dollar"></span> Fee Canellation</div>
                                     <div><span class="fas fa-receipt"></span> Express check-in</div>
                                     <div><span class="fas fa-concierge-bell"></span> Concierge</div>
                                 </div>
+                                <div th:if="${serviceProvider.reviews.size() != 0}" id="reviewList" style="border-style: solid;">
+                                    <ul>
+                                        <li th:each="review : ${serviceProvider.reviews}">
+                                            <p><b><span th:text="${review.title}"></span></b></p>
+                                            <p><span th:text="${review.content}"></span></p>
+                                            <p class="rating" th:text="${review.rating}"><b></b></p>
+                                            <form th:action="@{'/review/' + ${review.reviewId}}" method="post">
+                                                <button th:if="${#vars.request.isUserInRole('ROLE_ADMIN')}" type="submit">Delete review</button>
+                                            </form>
+                                        </li>
+                                    </ul>
+
+                                </div>
+                                <div th:unless="${serviceProvider.reviews.size() > 0}">
+                                    <p><b><em>No reviews available.</em></b></p>
+                                </div>
                             </div>
+                            <!- this will need to be changed! -->
+                            <div style="margin-left: 10px">
+                                <div th:if="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}">
+                                    <form id="reviewForm">
+                                        <br>
+                                        <label>Title:</label>
+                                        <input type="text" th:id="'title-' + ${stat.index}" name="title" value="Give a brief title of your experience"><br>
+                                        <label >Review</label>
+                                        <textarea th:id="'content-' + ${stat.index}" name="content"></textarea><br>
+                                        <label>Rating:</label>
+                                        <select th:id="'rating-' + ${stat.index}" name="rating">
+                                            <option value="1">1</option>å
+                                            <option value="2">2</option>
+                                            <option value="3">3</option>
+                                            <option value="4">4</option>
+                                            <option value="5">5</option>
+                                        </select>
+
+                                        <button type="submit" onclick="createReview(event)" th:data-index="${stat.index}" style="margin-top: 10px">Add Review</button>
+                                    </form>
+                                    <br>
+                                </div>
+
+                                <div th:unless="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}">
+                                    <b><a href="/login">Login</a> to leave a review!</b>
+                                </div>
+                            </div>
+
                         </div>
                         <div class="d-flex justify-content-end mt-1">
                             <div class="btn enquiry text-uppercase mx-2">Enquiry</div>
@@ -257,14 +300,20 @@
             </div>
         </div>
     </div>
+    <div >
+
+    </div>
+    </div>
 <script>
     AOS.init();
 </script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/js/bootstrap.bundle.min.js"></script>
 <script src="/js/popper.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/jquery.sticky.js"></script>
 <script src="/js/main.js"></script>
+<script src="/js/directory.js"></script>
+</html>
