--- a/src/main/resources/templates/directory-new.html
+++ b/src/main/resources/templates/directory-new.html
@@ -21,6 +21,7 @@
 
     <title>Italian Citizenship Reviews</title>
 </head>
+
 <!-- NAVBAR -->
 <header class="site-navbar m-3" >
     <div class="site-mobile-menu site-navbar-target">
@@ -50,7 +51,7 @@
                             <li><a href="">Full Service</a></li>
                         </ul>
                     </li>
-                    <li><a href="/user/dashboard/"><b>Blog</b></a></li>
+                    <li><a th href="/user/dashboard/"><b>Blog</b></a></li>
                     <li class="d-md-none"><a href="/logout"
                                              th:if="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}">Logout</a>
                         <a th:unless="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}"
@@ -59,13 +60,23 @@
             </nav>
             <div class="right-cta-menu text-right d-flex align-items-right col-3">
                 <div class="ml-auto">
-                    <a href="/logout" th:if="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}" class="btn btn-primary border-width-2 d-none d-md-inline-block"><span
-                            class="mr-2 icon-lock_outline" style="align:right"></span>
-                        Log Out</a>
-                    <a href="/user/dashboard/" th:if="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}" class="btn btn-primary border-width-2 d-none d-md-inline-block"> <i  class="fas fa-user-circle"></i></a>
+                    <a href="/logout" th:if="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}" class="btn btn-primary border-width-2 d-none d-md-inline-block">
+                        <span class="mr-2 icon-lock_outline" style="align:right"></span>
+                        Log Out
+                    </a>
+                    <a th:if="${#vars.request.isUserInRole('ROLE_ADMIN')}" href="/user/dashboard/admin/" class="btn btn-primary border-width-2 d-none d-md-inline-block">
+                        <i class="fas fa-user-circle"></i>
+                    </a>
+                    <a th:if="${#vars.request.isUserInRole('ROLE_USER')}" href="/user/dashboard/" class="btn btn-primary border-width-2 d-none d-md-inline-block">
+                        <i class="fas fa-user-circle"></i>
+                    </a>
 
-                    <a th:unless="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}" class="btn btn-primary border-width-2 d-none d-md-inline-block" href="/login"> Login</a>
+
+                    <a th:unless="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}" class="btn btn-primary border-width-2 d-none d-md-inline-block" href="/login">
+                        Login
+                    </a>
                 </div>
+
                 <a href="#" class="site-menu-toggle js-menu-toggle d-inline-block mt-lg-2 ml-3"><span
                         class="fa fa-bars h3 m-0 p-0 mt-2" id="hamburger"></span></a>
             </div>
@@ -229,11 +240,14 @@
                                                             <ul style="list-style: none" id="reviewList">
                                                                 <li th:each="review : ${serviceProvider.reviews}">
                                                                     <div class="m-2 p-4" style="border-style: solid; border-radius: 5px;">
+                                                                        <input type="hidden" name="userId" th:value="${review.userId}" />
                                                                         <h6><b><span th:text="${review.title}"></span></b></h6>
                                                                         <p class="rating" th:text="${review.rating}"><b></b></p>
                                                                         <p><span th:text="${review.content}"></span></p>
                                                                         <form th:action="@{'/review/' + ${review.reviewId}}" method="post">
                                                                             <button th:if="${#vars.request.isUserInRole('ROLE_ADMIN')}" type="submit" class="btn btn-primary">Delete review</button>
+                                                                            <a th:if="${#vars.request.isUserInRole('ROLE_ADMIN')}" th:href="@{/user/dashboard/{userId}(userId=${review.userId})}" class="btn btn-primary">Go to User</a>
+
                                                                         </form>
                                                                     </div>
                                                                 </li>
