--- a/src/main/resources/templates/user-new.html
+++ b/src/main/resources/templates/user-new.html
@@ -60,13 +60,23 @@
             </nav>
             <div class="right-cta-menu text-right d-flex align-items-right col-3">
                 <div class="ml-auto">
-                    <a href="/logout" th:if="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}" class="btn btn-primary border-width-2 d-none d-md-inline-block"><span
-                            class="mr-2 icon-lock_outline" style="align:right"></span>
-                        Log Out</a>
-                    <a href="/user/dashboard/" th:if="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}" class="btn btn-primary border-width-2 d-none d-md-inline-block"> <i  class="fas fa-user-circle"></i></a>
+                    <a href="/logout" th:if="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}" class="btn btn-primary border-width-2 d-none d-md-inline-block">
+                        <span class="mr-2 icon-lock_outline" style="align:right"></span>
+                        Log Out
+                    </a>
+                    <a th:if="${#vars.request.isUserInRole('ROLE_ADMIN')}" href="/user/dashboard/admin/" class="btn btn-primary border-width-2 d-none d-md-inline-block">
+                        <i class="fas fa-user-circle"></i>
+                    </a>
+                    <a th:if="${#vars.request.isUserInRole('ROLE_USER')}" href="/user/dashboard/" class="btn btn-primary border-width-2 d-none d-md-inline-block">
+                        <i class="fas fa-user-circle"></i>
+                    </a>
 
-                    <a th:unless="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}" class="btn btn-primary border-width-2 d-none d-md-inline-block" href="/login"> Login</a>
+
+                    <a th:unless="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}" class="btn btn-primary border-width-2 d-none d-md-inline-block" href="/login">
+                        Login
+                    </a>
                 </div>
+
                 <a href="#" class="site-menu-toggle js-menu-toggle d-inline-block mt-lg-2 ml-3"><span
                         class="fa fa-bars h3 m-0 p-0 mt-2" id="hamburger"></span></a>
             </div>
@@ -79,16 +89,18 @@
 <div class="container">
     <div id="content" style="margin-top: 125px; ">
         <div style="margin-top: 100px">
+
             <title style="margin-top: 100px">User Dashboard</title>
 
 
             <div>
                 <div class="review-container bg-white border">
 
+                    <div th:unless="${#vars.request.isUserInRole('ROLE_USER')}">
                         <h1 class="pl-3" style="font-family: Italiana" th:text="'Welcome ' + ${user.username}"></h1>
-                        <h4 class="pl-3">Here you can edit your reviews, delete your account or <a style="color: #005cbf" href="#add-provider"> add a service
+                        <h4  class="pl-3">Here you can edit your reviews, delete your account or <a style="color: #005cbf" href="#add-provider"> add a service
                             provider. </a></h4>
-
+                    </div>
                     <h3 style="font-family: Italiana" class="m-3 ">Reviews</h3>
                     <ul th:each="review, stat: ${reviews}" th:id="${stat.index}">
                         <div class="form-container pb-3">
@@ -119,7 +131,10 @@
                                 <input type="hidden" name="reviewId" th:value="${review.reviewId}">
                                 <input type="hidden" name="userId" th:value="${review.userId}">
                                 <button type="submit" class="btn btn-primary">Update Review</button>
+                                <button th:action="@{'/review/' + ${review.reviewId}}" method="post" class="btn btn-primary">Delete review</button>
+
                             </form>
+
                         </div>
                     </ul>
 
@@ -139,6 +154,28 @@
                             <button type="submit" class="btn btn-primary">Add Service Provider</button>
                         </div>
                     </form>
+
+                </div>
+                <div class="bg-white pb-3 form-container">
+                    <h3  class="m-3 p-3">Want to delete your account?</h3>
+                    <form class="service-provider-card m-3 p-3" method="post" th:action="@{/user/delete/{userId}(userId=${user.userId})}">
+                        <button type="submit" style="text-align: end" class="btn btn-primary">Delete Account</button>
+                    </form>
+                </div>
+                <div th:if="${#vars.request.isUserInRole('ROLE_ADMIN')}" class="bg-white pb-3 form-container">
+
+                    <form class="service-provider-card m-3 p-3" method="post" th:action="@{/user/delete/{userId}(userId=${user.userId})}">
+                        <div class="form-group">
+                            <label for="username">Username:</label>
+                            <input type="text" id="username" name="name" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Password:</label>
+                            <input type="text" id="password" name="password" class="form-control" required>
+                        </div>
+                        <button onclick="checkIfUsernameExists(event)" type="submit" style="text-align: end" class="btn btn-primary">Create new user</button>
+                    </form>
+
                 </div>
             </div>
         </div>
